# hengband

./: Makefile.am  configure.ac  readme_eng.txt
.github/workflows/: release.yaml  test-mac-build.yaml
docs/: HengbandChangeLog-1-6-2.html  HengbandChangeLog-3-0-0.html  HengbandChangeLog.html  HengbandEnglishScreenshot.html  HengbandFeedback.html  HengbandJapaneseScreenshot.html  HengbandSourceCode.html  index.html
lib/edit/: Makefile.am  a_info.txt  k_info.txt  q0dumpwitness.txt  r_info.txt
lib/file/: Makefile.am  mondeath.txt  rumors.txt  rumors_j.txt
lib/help/: Makefile.am  attack.txt  birth.txt  bldg.txt  editor.txt  objects.txt  raceclas.txt  tang.txt  version.txt
lib/pref/: Makefile.am  font.prf  graf-abt.prf  graf-new.prf  graf-ori.prf  graf-xxx.prf  graf.prf  pref-mac.prf  pref.prf  user.prf
lib/xtra/graf/: Makefile.am
lib/xtra/sound/: Makefile.am
macos-docs/: HengbandChangeLog-1-6-2.html  HengbandChangeLog-1-6-2.html.en  HengbandChangeLog.html  HengbandChangeLog.html.en  HengbandEnglishScreenshot.html.en  HengbandFeedback.html  HengbandFeedback.html.en  HengbandJapaneseScreenshot.html  HengbandJapaneseScreenshot.html.en  HengbandSourceCode.html  HengbandSourceCode.html.en  index.html  index.html.en
src/: Makefile.am  Makefile.std  artifact.c  autopick.c  birth.c  bldg.c  chest.c  chuukei.c  cmd-activate.c  cmd-eat.c  cmd-item.c  cmd-magiceat.c  cmd-mane.c  cmd-pet.c  cmd-quaff.c  cmd-read.c  cmd-smith.c  cmd-spell.c  cmd-spell.h  cmd-usestaff.c  cmd-zapwand.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd6.c  defines.h  dungeon.c  effects.c  externs.h  files.c  flavor.c  floor-generate.c  floor-save.c  floors.c  gameoption.c  grafmode.c  grafmode.h  grid.c  h-system.h  (+64 more)
src/cocoa/: AppDelegate.m
src/cocoa/ja.lproj/: MainMenu.strings
src/cocoa/ja.lproj/MainMenu.nib/: designable_translated.nib
src/floor/: floor-save.cpp
src/main/: angband-initializer.cpp
src/player/: player-damage.cpp
src/term/: z-rand.h
src/util/: angband-files.cpp
src/view/: display-map.cpp
